--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- app name -->
     <string name="app_name">圖吱小獼</string>
@@ -5,7 +6,7 @@
     <!-- main activity title -->
     <string name="main_title">圖資處服務</string>
 
-    <!-- main activity items (zh/en) -->
+    <!-- main activity items -->
     <string-array name="main_items">
         <item>常用問題</item>
         <item>問題服務</item>
@@ -14,4 +15,6 @@
         <item>資料庫查詢</item>
         <item>期刊查詢</item>
     </string-array>
+
+
 </resources>
