--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">圖吱小獼</string>
 
     <!-- main activity title -->
-    <string name="main_title">圖資處服務</string>
+    <string name="main_title">圖資處服務資訊</string>
 
     <!-- main activity items -->
     <string-array name="main_items">
@@ -14,7 +14,15 @@
         <item>館藏查詢</item>
         <item>資料庫查詢</item>
         <item>期刊查詢</item>
+        <item>設定</item>
     </string-array>
 
+    <!-- localeSW activity title -->
+    <string name="locale_title">語言切換</string>
 
+    <!-- localeSW activity items -->
+    <string-array name="locale_items">
+        <item>繁體中文</item>
+        <item>英文</item>
+    </string-array>
 </resources>
