--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -17,12 +17,18 @@
         <item>Setting</item>
     </string-array>
 
-    <!-- localeSW activity title -->
+    <!-- localehelp activity title -->
     <string name="locale_title">Language</string>
 
-    <!-- localeSW activity items -->
+    <!-- localehelp activity items -->
     <string-array name="locale_items">
         <item>Traditional Chinese</item>
         <item>English</item>
+    </string-array>
+
+    <!-- localehelp activity icon -->
+    <string-array name="locale_icon">
+        <item>@drawable/icon_tw</item>
+        <item>@drawable/icon_us</item>
     </string-array>
 </resources>
